style.css
* {
    font-family: Arial, Helvetica, sans-serif;
    padding: 0;
    margin: 0;
    border: 0;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    margin: auto;
}

header {
    position: fixed;
    top: 0;
}

h1 {
    display: flex;
    justify-content: center;
    font-size: 54px;
    font-weight: 900;
    margin-bottom: 3rem;
}

h2 {
    font-size: 30px;
    font-weight: lighter;
    margin: 10px 0;
}

a {
    color: #000;
    text-decoration: none;
    transition: all 0.2s;
    -webkit-transition: all 0.2s;
    -moz-transition: all 0.2s;
    -ms-transition: all 0.2s;
    -o-transition: all 0.2s;
}

a:hover {
    color: #b1b1b1;
    transform: translateY(-1px);
    -webkit-transform: translateY(-1px);
    -moz-transform: translateY(-1px);
    -ms-transform: translateY(-1px);
    -o-transform: translateY(-1px);
}

/* containers */
.container {
    background-color: #e2e2e2b6;
    backdrop-filter: blur(10px);
    display: flex;
    align-items: center;
    flex-direction: column;
    width: 280px;
    height: 400px;
    padding: 20px 10px;
    margin: 4px;
    border-radius: 1rem;
    -webkit-border-radius: 1rem;
    -moz-border-radius: 1rem;
    -ms-border-radius: 1rem;
    -o-border-radius: 1rem;
}

#quick-links {
    justify-content: space-between;
}

.inner-content {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    max-height: 272px;
    overflow-y: scroll;
}

.inner-container {
    background-color: #ffffff70;
    position: relative;
    display: flex;
    align-items: center;
    width: 90%;
    padding: 10px;
    margin: 4px 0;
    border-radius: 1rem;
    -webkit-border-radius: 1rem;
    -moz-border-radius: 1rem;
    -ms-border-radius: 1rem;
    -o-border-radius: 1rem;
}

.inner-container img {
    background-color: #fff;
    border-radius: 50%;
    height: 40px;
    margin-right: 20px;
}

.joke-container {
    font-weight: normal;
    height: 272px;
}

.inner-text {
    background-color: #fff;
    padding: 5px 10px;
    margin: 0 4px 0 0;
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
}

#date {
    justify-content: space-evenly;
    flex-direction: row;
    padding: 10px 20px;
    min-width: 10rem;
    height: auto;
    margin: 1rem auto;
}

.flex-row {
    display: flex;
    flex-direction: row;
}

.flex-column {
    display: flex;
    flex-direction: column;
}

.background {
    background-size: cover;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
}

.fa-solid {
    color: #fff;
    font-size: 16px;
    margin: 4px;
}

.fa-circle-minus {
    position: absolute;
    top: 5px;
    right: 5px;
    cursor: pointer;
    color: #b1b1b1;
    font-size: 14px;
}

.fa-circle-xmark {
    position: absolute;
    top: 5px;
    right: 5px;
    cursor: pointer;
    color: #b1b1b1;
    font-size: 14px;
}

.weather-icon {
    color: black;
    font-size: 40px;
    margin-right: 10px;
}

#link-dialog {
    background-color: #e2e2e2;
    backdrop-filter: blur(10px);
    text-align: center;
    position: fixed;
    top: 50%;
    left: 50%;
    width: 500px;
    padding: 1rem;
    border-radius: 1rem;
    -webkit-border-radius: 1rem;
    -moz-border-radius: 1rem;
    -ms-border-radius: 1rem;
    -o-border-radius: 1rem;
    transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
}

::backdrop {
    background-color: #000;
    opacity: 0.8;
}

.loader {
    width: 48px;
    height: 48px;
    background: #ff3d00;
    display: block;
    margin: 20px auto;
    position: relative;
    box-sizing: border-box;
    animation: rotationBack 1s ease-in-out infinite reverse;
}

.loader::before {
    content: "";
    box-sizing: border-box;
    left: 0;
    top: 0;
    transform: rotate(45deg);
    position: absolute;
    width: 48px;
    height: 48px;
    background: #ff3d00;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
}

.loader::after {
    content: "";
    box-sizing: border-box;
    width: 32px;
    height: 32px;
    border-radius: 50%;
    position: absolute;
    left: 50%;
    top: 50%;
    background: #fff;
    transform: translate(-50%, -50%);
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
}

@keyframes rotationBack {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(-360deg);
    }
}

footer {
    position: fixed;
    bottom: 0;
}

button {
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #b1b1b1;
    color: white;
    padding: 10px;
    margin: 1rem auto;
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
    transition: all 0.2s;
    -webkit-transition: all 0.2s;
    -moz-transition: all 0.2s;
    -ms-transition: all 0.2s;
    -o-transition: all 0.2s;
}

button:hover {
    box-shadow: 0 3px 3px #0000003b;
    transform: translateY(-4px);
    -webkit-transform: translateY(-4px);
    -moz-transform: translateY(-4px);
    -ms-transform: translateY(-4px);
    -o-transform: translateY(-4px);
}

button:active {
    box-shadow: 0 -3px 3px #0000003b;
    transform: translateY(4px);
    -webkit-transform: translateY(4px);
    -moz-transform: translateY(4px);
    -ms-transform: translateY(4px);
    -o-transform: translateY(4px);
}

.bottom-btn {
    position: absolute;
    bottom: 10px;
}

form {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
}

input {
    width: 90%;
    padding: 10px;
    margin: 10px 0 0;
    border-radius: 1rem;
    -webkit-border-radius: 1rem;
    -moz-border-radius: 1rem;
    -ms-border-radius: 1rem;
    -o-border-radius: 1rem;
}

.invis-btn {
    background-color: transparent;
}

textarea {
    resize: none;
    height: 80%;
}

@media (max-width: 768px) {
    section.flex-row {
        flex-direction: column;
        align-items: center;
    }
}

